--- a/templates/paragraphs/paragraph--banner.html.twig
+++ b/templates/paragraphs/paragraph--banner.html.twig
@@ -46,7 +46,6 @@
     view_mode ? 'banner--' ~ view_mode|clean_class,
     not paragraph.isPublished() ? 'banner--unpublished',
     'banner--design-' ~ design,
-    'banner--color-' ~ theme_color,
     content.field_icon|render ? 'banner--has-icon'
   ]
 %}
@@ -61,7 +60,7 @@
   <div{{ attributes.addClass(classes) }}>
     {% embed "@hdbt/misc/container.twig" with {container_element: 'banner'} %}
       {% block container_content %}
-        {% if content.field_icon|render and design is same as('align-left') %}
+        {% if content.field_icon|render and 'align-left' in design %}
           <div class="banner__icon">{{ content.field_icon }}</div>
         {% endif %}
 
