--- a/templates/paragraphs/paragraph--liftup-with-image.html.twig
+++ b/templates/paragraphs/paragraph--liftup-with-image.html.twig
@@ -60,7 +60,9 @@
             {% set alt = media.fields.field_media_image.alt %}
             {% if
               design == "image-on-right" or
-              design == "image-on-left"
+              design == "image-on-left" or
+              design == "image-on-right-secondary" or
+              design == "image-on-left-secondary"
             %}
               {% set image =
                 drupal_image(media.fields.field_media_image.entity.uri.value, 'image__3_2', {alt: alt}, responsive=true)
